--- a/web/index.html
+++ b/web/index.html
@@ -41,6 +41,7 @@
 
 <!-- Libraries -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
 
 <!-- Application -->
 <script src="/script/blockchain.js"></script>
