--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
 <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
 <!-- Components -->
-<link href="/components/toodles-account.html" rel="import">
+<link href="/components/toodles-authentication.html" rel="import">
 <link href="/components/toodles-toolbar.html" rel="import">
 <link href="/components/toodles-list.html" rel="import">
 <link href="/components/toodles-action.html" rel="import">
@@ -25,7 +25,7 @@
 <body>
 
 <!-- Account -->
-<toodles-account email="krhoyt" password="abc123"></toodles-account>
+<toodles-authentication email="krhoyt" password="abc123"></toodles-authentication>
 
 <!-- Toolbar -->
 <toodles-toolbar title="Toodles"></toodles-toolbar>
@@ -40,11 +40,15 @@
 <toodles-filter></toodles-filter>
 
 <!-- Libraries -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.0/moment.min.js"></script>
+<script src="/lib/moment-2.18.0.min.js"></script>
+<script src="/lib/tweenmax-1.19.1.min.js"></script>
+<script src="/lib/uuid-1.4.7.min.js"></script>
+
+<!-- Data -->
+<script src="/script/blockchain.js"></script>
+<script src="/script/model.js"></script>
 
 <!-- Application -->
-<script src="/script/blockchain.js"></script>
 <script src="/script/toodles.js"></script>
 
 </body>
