--- a/bluemix/public/test.html
+++ b/bluemix/public/test.html
@@ -17,9 +17,9 @@
   <input class="method" value="deploy" hidden="true">
   <input class="function" value="init" readonly>    
   <input class="argument" value="init">    
-  <input id="repository" value="https://github.com/krhoyt/Blockhead/toodles/chaincode">
+  <input id="repository" value="https://github.com/krhoyt/Toodles/chaincode">
   <button>Deploy Chaincode</button>
-  <input id="chaincode" value="32cc6900893f59c2e9afe28ce934f8f9a0305a4f10c6d6c20c4ed7d980da7025313d73c2a27a9e0153f8ce2b0353121293a197177c9a87fc35fb203d66d8bd04">
+  <input id="chaincode" value="341e8dc0549b9aa782e25850fb71b43bd11e574134702bb09cad13197001db8c1903c551d6f8d42635bdb42412067364a653fef5be56d6ec106d5eb624275b14">
 </div>
 
 <!-- Accounts -->
@@ -34,33 +34,37 @@
 <div>
   <input class="method" value="query" hidden="true">
   <input class="function" value="account_read" readonly>  
-  <input class="argument" value="krhoyt">
-  <input class="argument" value="abc123">  
+  <input class="argument" value="krhoyt" title="Username">
+  <input class="argument" value="abc123" title="Password">  
   <button>Account Read</button>
 </div>
 
 <div>
   <input class="method" value="invoke" hidden="true">
   <input class="function" value="account_edit" readonly>  
-  <input class="argument" value="abc-123">
-  <input class="argument" value="krhoyt">  
-  <input class="argument" value="abc123">  
+  <input class="argument" value="abc-123" title="Account ID">
+  <input class="argument" value="Kevin" title="First name">  
+  <input class="argument" value="Hoyt" title="Last name">      
+  <input class="argument" value="krhoyt" title="Username">  
+  <input class="argument" value="abc123" title="Password">  
   <button>Account Edit</button>
 </div>
 
 <div>
   <input class="method" value="invoke" hidden="true">
   <input class="function" value="account_add" readonly>  
-  <input class="argument" value="abc-123">
-  <input class="argument" value="krhoyt">  
-  <input class="argument" value="abc123">  
+  <input class="argument" value="abc-123" title="Account ID">
+  <input class="argument" value="Kevin" title="First name">  
+  <input class="argument" value="Hoyt" title="Last name">    
+  <input class="argument" value="krhoyt" title="Username">  
+  <input class="argument" value="abc123" title="Password">  
   <button>Account Add</button>
 </div>
 
 <div>
   <input class="method" value="invoke" hidden="true">
   <input class="function" value="account_delete" readonly>  
-  <input class="argument" value="abc-123">
+  <input class="argument" value="abc-123" title="Account ID">
   <button>Account Delete</button>
 </div>
 
