Updated application to match data model changes.
Account removed email, added name, first, and last. Found some bugs
dealing with no content as well.

--- a/bluemix/public/test.html
+++ b/bluemix/public/test.html
@@ -125,7 +125,7 @@
 <div>
   <input class="method" value="query" hidden="true">
   <input class="function" value="location_browse" readonly>  
-  <input class="argument" value="all" placeholder="Location ID" title="Location ID">
+  <input class="argument" value="all" placeholder="Account ID" title="Account ID">
   <button>Location Browse</button>
 </div>
 
