Still allowing for return of all accounts.
Optional support for peer accounts (list of accounts not inclusive of
the calling account).

--- a/bluemix/public/test.html
+++ b/bluemix/public/test.html
@@ -19,7 +19,7 @@
   <input class="argument" value="init" readonly>    
   <input id="repository" value="https://github.com/krhoyt/Toodles/chaincode" placeholder="Repository" title="Repository">
   <button>Deploy Chaincode</button>
-  <input id="chaincode" value="17abdb9fcc50d315a5f9239e7675baffafe72439cdb30c06f3d83d57c667ef48ffea02b639878d1a31f0025e0f2aef28f13e47fd15ec597555ada9d49de3e9f7" placeholder="Chaincode ID" title="Chaincode ID">
+  <input id="chaincode" value="8606dd8c9574be6af6de20c039e7fed5ee3caf07fd457aabc44af83bb8421836bfe39702c3dd2897e4dd7fdf286d24ff37763e397b07b29878a21026c8468f56" placeholder="Chaincode ID" title="Chaincode ID">
 </div>
 
 <!-- Accounts -->
@@ -27,6 +27,7 @@
 <div>
   <input class="method" value="query" hidden="true">
   <input class="function" value="account_browse" readonly>
+  <input class="argument" value="c02471de-f6d0-4909-a93a-79c794ea7d99" placeholder="Account ID" title="Account ID">  
   <button>Account Browse</button>
 </div>
 
