--- a/bluemix/public/test.html
+++ b/bluemix/public/test.html
@@ -19,7 +19,7 @@
   <input class="argument" value="init" readonly>    
   <input id="repository" value="https://github.com/krhoyt/Toodles/chaincode" placeholder="Repository" title="Repository">
   <button>Deploy Chaincode</button>
-  <input id="chaincode" value="8606dd8c9574be6af6de20c039e7fed5ee3caf07fd457aabc44af83bb8421836bfe39702c3dd2897e4dd7fdf286d24ff37763e397b07b29878a21026c8468f56" placeholder="Chaincode ID" title="Chaincode ID">
+  <input id="chaincode" value="7721bc7da47454354e074589798d9ef3ae59be24a0fb8705b190b6b9e4c28ab7a38ca1df36537a25873f3660672e37d8e3b37c54c5c0432f3415f6c04c36ff1a" placeholder="Chaincode ID" title="Chaincode ID">
 </div>
 
 <!-- Accounts -->
@@ -27,7 +27,7 @@
 <div>
   <input class="method" value="query" hidden="true">
   <input class="function" value="account_browse" readonly>
-  <input class="argument" value="c02471de-f6d0-4909-a93a-79c794ea7d99" placeholder="Account ID" title="Account ID">  
+  <input class="argument" value="all" placeholder="Account ID" title="Account ID">  
   <button>Account Browse</button>
 </div>
 
